--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="main">
         <nav class = "nav">
             <div class="nav-part1">
-                <h2>ILYA Misco</h2>
+                <h2>Dhaval </h2>
                 <h3>— Visual & Product designer <br> based in Estonia</h3>
             </div>
             <div class="nav-part2">
@@ -26,7 +26,7 @@
 
         </nav>
         <div class="content">
-            <h3>Hello! I'm Ilya.</h3>
+            <h3>Hello! I'm Dhaval.</h3>
             <h1>A multidisciplinary designer focusing on digital experiences. </h1>
         </div>
         <div class="case">
